test_regress/t/t_prop_s_always_liveness.out
*-* All Finished *-*
[120] %Error: t_prop_s_always_liveness.v:26: Assertion failed in top.t
%Error: t/t_prop_s_always_liveness.v:26: Verilog $stop
Aborting...
